--- a/Web/GameHomepage.html
+++ b/Web/GameHomepage.html
@@ -15,14 +15,15 @@
         </div>
         <div class="Partners">
             <h3>Partners</h3>
-            <!--Rescale the images and move them to the rightside-->
-            <img src="nvidia.png" alt="Nvida">
-            <img src="eplan.png" alt="Eplan">
-            <img src="ansys.png" alt="Ansys">
-            <img src="claroty.png" alt="Claroty">
-            <img src="microsoft.png" alt="Microsoft">
-            <img src="oden.png" alt="Oden">
-            <img src="ptc.png" alt="PTC">
+             <!--Rescale the images and move them to the rightside-->
+             <img src="nvidia.png" alt="Nvida" class="logo">
+             <img src="eplan.png" alt="Eplan" class="logo">
+             <img src="ansys.png" alt="Ansys" class="logo">
+             <img src="claroty.png" alt="Claroty" class="logo">
+             <img src="microsoft.png" alt="Microsoft" class="logo">
+             <img src="oden.png" alt="Oden" class="logo">
+             <img src="ptc.png" alt="PTC" class="logo">
+             </style>
         </div>
         <!--Make the sign/log in and add a image in the center of the Homepage-->
     </head>
