--- a/Web/GameHomepage.html
+++ b/Web/GameHomepage.html
@@ -26,5 +26,10 @@
              </style>
         </div>
         <!--Make the sign/log in and add a image in the center of the Homepage-->
+        <div class="In">
+            <input type="text" placeholder="Username" required>
+            <input type="password" placeholder="Password" required>
+            <button type="submit">Log In</button>
+        </div>
     </head>
 </html>
