--- a/Web/login.html
+++ b/Web/login.html
@@ -16,12 +16,12 @@
             </div>
             <form action="#" method="POST" id="loginForm">
                 <div class="input-group">
-                    <label for="username">Usuario</label>
+                    <label for="username">Email</label>
                     <input type="text" id="username" name="username" required>
                     <div class="underline"></div>
                 </div>
                 <div class="input-group password-group">
-                    <label for="password">Contraseña</label>
+                    <label for="password">Password</label>
                     <input type="password" id="password" name="password" required>
                     <span id="togglePassword" class="toggle-password">Show</span>
                     <div class="underline"></div>
@@ -34,7 +34,7 @@
                     <a href="#" class="forgot-password">Forgot Password?</a>
                 </div>
                 <div class="button-group">
-                    <button type="submit" onclick="window.location.href='GameHomepage.html'">Ingresar</button>
+                    <button type="submit" onclick="window.location.href='GameHomepage.html'">Log In</button>
                 </div>
                 <div class="error-message" id="errorMessage"></div>
             </form>
