--- a/Web_Header/GameHomepage.html
+++ b/Web_Header/GameHomepage.html
@@ -26,7 +26,7 @@
             <a href="#" class="btn-search">
                 <img src="lupa.png" alt="Icono de búsqueda">
             </a>
-            <a href="#" class="btn-login">
+            <a href="login.html" class="btn-login">
                 <!-- Reemplaza el icono de usuario con la imagen deseada -->
                 <img src="icono.png" alt="Icono de usuario">
             </a>
