--- a/Web/GameHomepage.html
+++ b/Web/GameHomepage.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css">
-        <div class="Description">
-            <h1>Description:</h1>
-            <!-- Porque deben usar el simulador, en lugar de que estamos desarrollando -->
-            <p>The Legacy of RockWell es simulador donde se toman diferentes decisiones con la intencion de generar un productos inovadores, donde podras apoyarte de todas los servicios y partners que RockWell Automatic tiene a su disposicion.</p>
-            <p>Todo esto con la finalidad de generar interes y poder difundir los diferentes servicios que ofrece RockWell, queremos que todos los usuarios se acerquen al simulador desarrollen las ideas que tienen, asi mismo queremos que comprendan la filosofia del hilo digital dentro de la empresa, desde que se tiene una idea hasta que esta es desarrollada.</p>
-            <p>El simulador busca aprovechar al máximo lo que los usuarios tengan interés en desarrollar, mientras utilizan las tecnologías/servicios ofrecidos por la empresa, por lo cual habrá una tabla de clasificación donde se podrán encontrar nuevas ideas, que no se quedaran solo en eso, sino que podrán llevarse a cabo teniendo una simulación de este con ayuda del juego para hacerlo más dinámico y provocar un interés el cual no solo se quede en el juego sino que pueda convertirse en algo más que solo un juego.</p>
-        </div>
+        <link rel="stylesheet" href="GameHomepage.css">
         <div class="LeaderBoard">
             <!--Separate leftspace to have a column just for this-->
             <h3>LeaderBoard</h3>
@@ -24,12 +17,5 @@
              <img src="oden.png" alt="Oden" class="logo">
              <img src="ptc.png" alt="PTC" class="logo">
              </style>
-        </div>
-        <!--Make the sign/log in and add a image in the center of the Homepage-->
-        <div class="In">
-            <input type="text" placeholder="Username" required>
-            <input type="password" placeholder="Password" required>
-            <button type="submit">Log In</button>
-        </div>
     </head>
 </html>
