--- a/Web/Homepage.html
+++ b/Web/Homepage.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rockwell Automation</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Homepage.css">
 </head>
 <body>
     <header class="header">
@@ -19,14 +19,14 @@
                 <li><a href="#">Solutions & Industries</a></li>
                 <li><a href="#">Support</a></li>
                 <li><a href="#">Sales & Partners</a></li>
-                <li><a href="#">Game</a></li>
+                <li><a href="login.html" class="btn-login">Game</a></li>
             </ul>            
         </nav>
         <div class="user-login">
             <a href="#" class="btn-search">
                 <img src="lupa.png" alt="Icono de búsqueda">
             </a>
-            <a href="login.html" class="btn-login">
+            <a href="#" class="btn-login">
                 <!-- Reemplaza el icono de usuario con la imagen deseada -->
                 <img src="icono.png" alt="Icono de usuario">
             </a>
