--- a/Web/create-account.html
+++ b/Web/create-account.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rockwell Automation</title>
-    <link rel="stylesheet" href="styles3.css">
+    <link rel="stylesheet" href="create-account.css">
 </head>
 <body>
     <header class="header">
@@ -93,7 +93,7 @@
             </div>
         </form>
     </div>
-    <script src="script3.js"></script>
+    <script src="create-account.js"></script>
 </body>
 </html>
 
