--- a/Web/login.html
+++ b/Web/login.html
@@ -59,6 +59,6 @@
         <p>The aim is to generate interest and promote the different services offered by RockWell. We want all users to engage with the simulator, develop their ideas, and understand the philosophy of the digital thread within the company, from the inception of an idea to its development.</p>
         <p>The simulator is designed to harness what users are interested in developing while using the technologies and services offered by the company. There will be a leaderboard showcasing new ideas, which won't just remain as ideas but can be realized with the help of the simulation. This dynamic approach aims to spark an interest that starts with the game and can grow into something beyond just a game.</p>
     </div>  
-    <script src="script.js"></script>
+    <script src="login.js"></script>
 </body>
 </html>
