--- a/Web/create-account.html
+++ b/Web/create-account.html
@@ -68,7 +68,7 @@
                 <input type="text" id="phone" name="phone">
                 <button type="button" id="continue-button-step3">CONTINUE</button>
             </div>
-            <script src="script2.js"></script>
+            <script src="login.js"></script>
             <div class="step" id="step4" style="display: none;">
                 <h2><span class="step-number">4</span> Create Password</h2>
                 <ul>
