--- a/Web/GameHomepage.html
+++ b/Web/GameHomepage.html
@@ -2,20 +2,23 @@
 <html>
     <head>
         <link rel="stylesheet" href="GameHomepage.css">
-        <div class="LeaderBoard">
-            <!--Separate leftspace to have a column just for this-->
-            <h3>LeaderBoard</h3>
+        <div class="nivelar">
+             <div class="LeaderBoard">
+                <h3>Leaderboard</h3>
+            </div>
+        <div class="placeholder">
         </div>
         <div class="Partners">
             <h3>Partners</h3>
-             <!--Rescale the images and move them to the rightside-->
-             <img src="nvidia.png" alt="Nvida" class="logo">
-             <img src="eplan.png" alt="Eplan" class="logo">
-             <img src="ansys.png" alt="Ansys" class="logo">
-             <img src="claroty.png" alt="Claroty" class="logo">
-             <img src="microsoft.png" alt="Microsoft" class="logo">
-             <img src="oden.png" alt="Oden" class="logo">
-             <img src="ptc.png" alt="PTC" class="logo">
-             </style>
+            <img src="nvidia.png" alt="Nvida" class="logo">
+            <img src="eplan.png" alt="Eplan" class="logo">
+            <img src="ansys.png" alt="Ansys" class="logo">
+            <img src="claroty.png" alt="Claroty" class="logo">
+            <img src="microsoft.png" alt="Microsoft" class="logo">
+            <img src="oden.png" alt="Oden" class="logo">
+            <img src="ptc.png" alt="PTC" class="logo">
+            </style>
+    </div>
+    </div>
     </head>
 </html>
