--- a/Web/GameHomepage.html
+++ b/Web/GameHomepage.html
@@ -4,7 +4,14 @@
         <link rel="stylesheet" href="GameHomepage.css">
         <div class="nivelar">
              <div class="LeaderBoard">
-                <h3>Leaderboard</h3>
+                <div class="Controls">
+                    <h3>Controls:</h3>
+                    <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
+                </div>
+                <div class="Leaderboard">
+                    <h3>Leaderboard:</h3>
+                    <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
+                </div>
             </div>
         <div class="placeholder">
         </div>
@@ -17,8 +24,7 @@
             <img src="microsoft.png" alt="Microsoft" class="logo">
             <img src="oden.png" alt="Oden" class="logo">
             <img src="ptc.png" alt="PTC" class="logo">
-            </style>
-    </div>
+        </div>
     </div>
     </head>
 </html>
