Modifque estilos y agregue el header a todas las paginas

--- a/Web/GameHomepage.html
+++ b/Web/GameHomepage.html
@@ -2,29 +2,53 @@
 <html>
     <head>
         <link rel="stylesheet" href="GameHomepage.css">
+    <body>
+    </head>
+    <header class="header">
+        <div class="logo">
+            <a href="Homepage.html">
+            <img src="Rockwell_Automation_Logo.jpg" alt="Logo de la marca">
+            </a>
+        </div>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Solutions & Industries</a></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#">Sales & Partners</a></li>
+            </ul>            
+        </nav>
+        <div class="user-login">
+            <a href="#" class="btn-search">
+                <img src="lupa.png" alt="Icono de búsqueda">
+            </a>
+        </div>        
+    </header>
+    <div class="container">
         <div class="nivelar">
-             <div class="LeaderBoard">
+            <div class="LeaderBoard">
                 <div class="Controls">
                     <h3>Controls:</h3>
                     <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
                 </div>
-                <div class="Leaderboard">
-                    <h3>Leaderboard:</h3>
-                    <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
-                </div>
+            <div class="Leaderboard">
+                <h3>Leaderboard:</h3>
+                <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
             </div>
-        <div class="placeholder">
         </div>
-        <div class="Partners">
-            <h3>Partners</h3>
-            <img src="nvidia.png" alt="Nvida" class="logo">
-            <img src="eplan.png" alt="Eplan" class="logo">
-            <img src="ansys.png" alt="Ansys" class="logo">
-            <img src="claroty.png" alt="Claroty" class="logo">
-            <img src="microsoft.png" alt="Microsoft" class="logo">
-            <img src="oden.png" alt="Oden" class="logo">
-            <img src="ptc.png" alt="PTC" class="logo">
-        </div>
+    <div class="placeholder">
     </div>
-    </head>
+    <div class="Partners">
+        <h3>Partners</h3>
+        <img src="nvidia.png" alt="Nvida" class="logo">
+        <img src="eplan.png" alt="Eplan" class="logo">
+        <img src="ansys.png" alt="Ansys" class="logo">
+        <img src="claroty.png" alt="Claroty" class="logo">
+        <img src="microsoft.png" alt="Microsoft" class="logo">
+        <img src="oden.png" alt="Oden" class="logo">
+        <img src="ptc.png" alt="PTC" class="logo">
+    </div>
+    </div>
+    </body>
 </html>
