--- a/Web/create-account.html
+++ b/Web/create-account.html
@@ -10,7 +10,9 @@
 <body>
     <header class="header">
         <div class="logo">
+            <a href="Homepage.html">
             <img src="Rockwell_Automation_Logo.jpg" alt="Logo de la marca">
+            </a>
         </div>
         <nav>
             <ul class="nav-links">
@@ -19,16 +21,11 @@
                 <li><a href="#">Solutions & Industries</a></li>
                 <li><a href="#">Support</a></li>
                 <li><a href="#">Sales & Partners</a></li>
-                <li><a href="#">Game</a></li>
             </ul>            
         </nav>
         <div class="user-login">
             <a href="#" class="btn-search">
                 <img src="lupa.png" alt="Icono de búsqueda">
-            </a>
-            <a href="login.html" class="btn-login">
-                <!-- Reemplaza el icono de usuario con la imagen deseada -->
-                <img src="icono.png" alt="Icono de usuario">
             </a>
         </div>        
     </header>
@@ -93,6 +90,7 @@
             </div>
         </form>
     </div>
+    
     <script src="create-account.js"></script>
 </body>
 </html>
