--- a/Web/login.html
+++ b/Web/login.html
@@ -7,10 +7,30 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
+    <header class="header">
+        <div class="logo">
+            <a href="Homepage.html">
+            <img src="Rockwell_Automation_Logo.jpg" alt="Logo de la marca">
+            </a>
+        </div>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Solutions & Industries</a></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#">Sales & Partners</a></li>
+            </ul>            
+        </nav>
+        <div class="user-login">
+            <a href="#" class="btn-search">
+                <img src="lupa.png" alt="Icono de búsqueda">
+            </a>
+        </div>        
+    </header>
     <div class="login-container">
         <div class="login-box">
             <div class="login-header">
-                <img src="logo.png" alt="Logo">
                 <h2>Sign in</h2>
                 <h4>with your Rockwell Automation Account</h4>
             </div>
@@ -53,7 +73,7 @@
         </div>
     </div>
     <div class="Description">
-        <h1>Description:</h1>
+        <h1>Description</h1>
         <!-- Porque deben usar el simulador, en lugar de que estamos desarrollando -->
         <p>The Legacy of RockWell is a simulator where you make various decisions with the intention of creating an innovative product, utilizing all the services and partners that RockWell Automation has at its disposal.</p>
         <p>The aim is to generate interest and promote the different services offered by RockWell. We want all users to engage with the simulator, develop their ideas, and understand the philosophy of the digital thread within the company, from the inception of an idea to its development.</p>
