Cambio de nombre
Homepage = index

--- a/Web/public/login.html
+++ b/Web/public/login.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <a href="Homepage.html">
+            <a href="index.html">
             <img src="Rockwell_Automation_Logo.jpg" alt="Logo de la marca">
             </a>
         </div>
