--- a/Web/public/index.html
+++ b/Web/public/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#">Products</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Solutions & Industries</a></li>
-                <li><a href="#">Ayuda</a></li>
+                <li><a href="#">Support</a></li>
                 <li><a href="#">Sales & Partners</a></li>
                 <li><a href="login.html" class="btn-login">Game</a></li>
             </ul>            
